Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -1,411 +1,57 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Israel Store - Blox Style</title>
-<style>
-  * {
-    margin:0; padding:0; box-sizing:border-box;
-  }
-  body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background:#121212;
-    color:#eee;
-    min-height:100vh;
-  }
-  header {
-    background:#0d47a1;
-    padding:15px 30px;
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    color:#fff;
-    position:fixed;
-    top:0; left:0; right:0;
-    z-index:1000;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.6);
-  }
-  header h1 {
-    font-weight: 900;
-    font-size: 1.8rem;
-    user-select:none;
-  }
-  nav a {
-    color:#cfd8dc;
-    font-weight: 600;
-    margin-left: 1.5rem;
-    text-decoration:none;
-    transition: color 0.3s ease;
-  }
-  nav a:hover {
-    color:#82b1ff;
-  }
-  main {
-    max-width:1100px;
-    margin: 100px auto 50px;
-    padding: 0 15px;
-  }
-  h2 {
-    font-weight: 700;
-    border-bottom: 3px solid #0d47a1;
-    padding-bottom: 8px;
-    margin-bottom: 20px;
-    user-select:none;
-  }
-  .produtos-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
-    gap: 1.3rem;
-  }
-  .produto-card {
-    background: #1e1e1e;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 0 10px #0d47a1aa;
-    display: flex;
-    flex-direction: column;
-    transition: transform 0.2s ease;
-  }
-  .produto-card:hover {
-    transform: scale(1.05);
-  }
-  .produto-card img {
-    width: 100%;
-    height: 180px;
-    object-fit: cover;
-  }
-  .produto-info {
-    padding: 15px;
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    color: #ddd;
-  }
-  .produto-info h3 {
-    font-size: 1.1rem;
-    margin-bottom: 10px;
-    user-select:none;
-  }
-  .produto-info .price {
-    font-size: 1.1rem;
-    font-weight: 700;
-    color: #82b1ff;
-    margin-bottom: 15px;
-    user-select:none;
-  }
-  .produto-info button {
-    background: #0d47a1;
-    color: #fff;
-    border: none;
-    padding: 10px;
-    font-weight: 700;
-    border-radius: 6px;
-    cursor: pointer;
-    user-select:none;
-    transition: background 0.3s ease;
-  }
-  .produto-info button:hover {
-    background: #1565c0;
-  }
-  #cart-btn {
-    position: fixed;
-    bottom: 25px;
-    right: 25px;
-    background: #0d47a1;
-    color: #fff;
-    border:none;
-    padding: 14px 20px;
-    font-size: 1.1rem;
-    font-weight: 700;
-    border-radius: 50px;
-    cursor: pointer;
-    box-shadow: 0 0 12px #0d47a1bb;
-    z-index: 1500;
-    user-select:none;
-  }
-  #cart-btn:hover {
-    background: #1565c0;
-  }
-  #cart {
-    position: fixed;
-    top: 70px;
-    right: 0;
-    width: 360px;
-    max-height: calc(100vh - 80px);
-    background: #212121;
-    box-shadow: -4px 0 15px #0d47a1cc;
-    padding: 20px;
-    overflow-y: auto;
-    transform: translateX(100%);
-    transition: transform 0.3s ease;
-    z-index: 1400;
-    border-left: 3px solid #0d47a1;
-  }
-  #cart.open {
-    transform: translateX(0);
-  }
-  #cart h2 {
-    color: #82b1ff;
-    margin-bottom: 15px;
-    user-select:none;
-  }
-  #cart ul {
-    list-style: none;
-    max-height: 55vh;
-    overflow-y: auto;
-    margin-bottom: 15px;
-  }
-  #cart li {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 0;
-    border-bottom: 1px solid #333;
-    color: #ccc;
-    user-select:none;
-  }
-  #cart li button.remove {
-    background: #b71c1c;
-    border: none;
-    color: white;
-    border-radius: 5px;
-    cursor: pointer;
-    padding: 3px 8px;
-    font-weight: 700;
-    transition: background 0.3s ease;
-    user-select:none;
-  }
-  #cart li button.remove:hover {
-    background: #ef5350;
-  }
-  #cart .total {
-    font-weight: 700;
-    font-size: 1.3rem;
-    color: #82b1ff;
-    margin-bottom: 20px;
-    user-select:none;
-  }
-  #cart button#close-cart {
-    background: #0d47a1;
-    border: none;
-    color: white;
-    width: 100%;
-    padding: 12px 0;
-    font-weight: 700;
-    border-radius: 8px;
-    cursor: pointer;
-    user-select:none;
-    transition: background 0.3s ease;
-  }
-  #cart button#close-cart:hover {
-    background: #1565c0;
-  }
-  #pix-section {
-    text-align: center;
-    margin-top: 10px;
-    color: #82b1ff;
-    user-select:none;
-  }
-  #pix-section img {
-    margin: 10px auto 0;
-    width: 180px;
-    cursor: pointer;
-    border-radius: 12px;
-    box-shadow: 0 0 15px #0d47a1cc;
-  }
-  #pix-section .pix-key {
-    margin-top: 6px;
-    font-weight: 700;
-    cursor: pointer;
-    color: #bbdefb;
-  }
-  #pix-section .pix-key:hover {
-    color: #e3f2fd;
-  }
-  #whatsapp-link {
-    display: inline-block;
-    background: #25d366;
-    color: white;
-    padding: 10px 18px;
-    border-radius: 50px;
-    margin-top: 15px;
-    font-weight: 700;
-    text-decoration: none;
-    user-select:none;
-    transition: background 0.3s ease;
-  }
-  #whatsapp-link:hover {
-    background: #128c4a;
-  }
-  @media(max-width: 960px){
-    #cart {
-      width: 90vw;
-    }
-  }
-  @media(max-width: 600px){
-    nav a {
-      margin-left: 10px;
-      font-size: 0.9rem;
-    }
-    header h1 {
-      font-size: 1.4rem;
-    }
-  }
-</style>
-</head>
-<body>
+<!-- ...o resto do código permanece igual... -->
 
-<header>
-  <h1>Israel Store</h1>
-  <nav>
-    <a href="#bloxfruits">Blox Fruits</a>
-    <a href="#robux">Robux</a>
-    <a href="#freefire">Free Fire</a>
-  </nav>
-</header>
-
-<main>
-  <section id="bloxfruits">
-    <h2>Blox Fruits</h2>
-    <div class="produtos-grid">
-      <div class="produto-card" data-name="Conta Level 2450 - Dragon" data-price="80" data-details="Usuário: Cleiton\nSenha: 1234">
-        <img src="https://i.imgur.com/0nZXzFb.jpg" alt="Conta Level 2450 - Dragon" />
-        <div class="produto-info">
-          <h3>Conta Level 2450 - Dragon</h3>
-          <p class="price">R$ 80,00</p>
-          <button onclick="addToCart('Conta Level 2450 - Dragon', 80, 'Usuário: Cleiton\nSenha: 1234')">Comprar</button>
-        </div>
-      </div>
-      <div class="produto-card" data-name="Conta Level 2300 - Leopard" data-price="75" data-details="Usuário: Daniel\nSenha: 5678">
-        <img src="https://i.imgur.com/Qh0nMBW.jpg" alt="Conta Level 2300 - Leopard" />
-        <div class="produto-info">
-          <h3>Conta Level 2300 - Leopard</h3>
-          <p class="price">R$ 75,00</p>
-          <button onclick="addToCart('Conta Level 2300 - Leopard', 75, 'Usuário: Daniel\nSenha: 5678')">Comprar</button>
-        </div>
-      </div>
-      <div class="produto-card" data-name="Conta Level 2200 - Venom" data-price="70" data-details="Usuário: Lucas\nSenha: 91011">
-        <img src="https://i.imgur.com/UTcgr2x.jpg" alt="Conta Level 2200 - Venom" />
-        <div class="produto-info">
-          <h3>Conta Level 2200 - Venom</h3>
-          <p class="price">R$ 70,00</p>
-          <button onclick="addToCart('Conta Level 2200 - Venom', 70, 'Usuário: Lucas\nSenha: 91011')">Comprar</button>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="robux" style="margin-top: 3rem;">
-    <h2>Robux</h2>
-    <div class="produtos-grid">
-      <div class="produto-card" data-name="500 Robux" data-price="40" data-details="Código Robux: ROBUX-500-GRT98">
-        <img src="https://i.imgur.com/qv5Om4E.png" alt="500 Robux" />
-        <div class="produto-info">
-          <h3>500 Robux</h3>
-          <p class="price">R$ 40,00</p>
-          <button onclick="addToCart('500 Robux', 40, 'Código Robux: ROBUX-500-GRT98')">Comprar</button>
-        </div>
-      </div>
-      <div class="produto-card" data-name="1000 Robux" data-price="75" data-details="Código Robux: ROBUX-1000-HY72J">
-        <img src="https://i.imgur.com/qv5Om4E.png" alt="1000 Robux" />
-        <div class="produto-info">
-          <h3>1000 Robux</h3>
-          <p class="price">R$ 75,00</p>
-          <button onclick="addToCart('1000 Robux', 75, 'Código Robux: ROBUX-1000-HY72J')">Comprar</button>
-        </div>
-      </div>
-      <div class="produto-card" data-name="2000 Robux" data-price="140" data-details="Código Robux: ROBUX-2000-XY98P">
-        <img src="https://i.imgur.com/qv5Om4E.png" alt="2000 Robux" />
-        <div class="produto-info">
-          <h3>2000 Robux</h3>
-          <p class="price">R$ 140,00</p>
-          <button onclick="addToCart('2000 Robux', 140, 'Código Robux: ROBUX-2000-XY98P')">Comprar</button>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="freefire" style="margin-top: 3rem;">
-    <h2>Diamantes Free Fire</h2>
-    <div class="produtos-grid">
-      <div class="produto-card" data-name="1000 Diamantes" data-price="60" data-details="ID Free Fire: 99887766">
-        <img src="https://i.imgur.com/1m9h60B.png" alt="1000 Diamantes" />
-        <div class="produto-info">
-          <h3>1000 Diamantes</h3>
-          <p class="price">R$ 60,00</p>
-          <button onclick="addToCart('1000 Diamantes', 60, 'ID Free Fire: 99887766')">Comprar</button>
-        </div>
-      </div>
-      <div class="produto-card" data-name="2000 Diamantes" data-price="115" data-details="ID Free Fire: 44556677">
-        <img src="https://i.imgur.com/1m9h60B.png" alt="2000 Diamantes" />
-        <div class="produto-info">
-          <h3>2000 Diamantes</h3>
-          <p class="price">R$ 115,00</p>
-          <button onclick="addToCart('2000 Diamantes', 115, 'ID Free Fire: 44556677')">Comprar</button>
-        </div>
-      </div>
-      <div class="produto-card" data-name="5000 Diamantes" data-price="275" data-details="ID Free Fire: 11223344">
-        <img src="https://i.imgur.com/1m9h60B.png" alt="5000 Diamantes" />
-        <div class="produto-info">
-          <h3>5000 Diamantes</h3>
-          <p class="price">R$ 275,00</p>
-          <button onclick="addToCart('5000 Diamantes', 275, 'ID Free Fire: 11223344')">Comprar</button>
-        </div>
-      </div>
-    </div>
-  </section>
-</main>
-
-<button id="cart-btn" aria-label="Abrir carrinho de compras">Carrinho 🛒</button>
-
-<aside id="cart" aria-label="Carrinho de compras" role="region" aria-live="polite">
+<aside id="cart" aria-label="Carrinho de compras">
   <h2>Seu Carrinho</h2>
-  <ul id="cart-items">
-    <li>Seu carrinho está vazio.</li>
-  </ul>
-  <div class="total">Total: R$ <span id="cart-total">0.00</span></div>
+  <ul id="cartItems"></ul>
+  <div class="total">Total: R$ <span id="cartTotal">0,00</span></div>
 
-  <div id="pix-section" style="display:none;">
-    <p>Pague via Pix com o QR Code:</p>
-    <img id="pix-qr" src="" alt="QR Code Pix" title="Clique para copiar chave Pix" />
-    <div class="pix-key" id="pix-key" tabindex="0" title="Clique para copiar chave Pix"></div>
-    <a id="whatsapp-link" href="#" target="_blank" rel="noopener noreferrer">Enviar comprovante pelo WhatsApp</a>
+  <div id="pedidoResumo" style="margin-top:1rem; background:#164216; padding:10px; border-radius:8px; color:#b5e48c; font-size:0.9rem; white-space: pre-wrap; user-select: all;">
+    <strong>Resumo do pedido aparecerá aqui...</strong>
   </div>
 
-  <button id="close-cart" aria-label="Fechar carrinho">Fechar Carrinho</button>
+  <div id="pixPayment" style="display:none; margin-top:1rem;">
+    <p>Pague via Pix com o QR Code:</p>
+    <img id="pixQR" src="" alt="QR Code Pix" title="Clique para copiar chave Pix" />
+    <div class="pixKey" id="pixKey" title="Clique para copiar chave Pix" tabindex="0"></div>
+    <a id="whatsappLink" href="#" target="_blank" rel="noopener noreferrer" aria-label="Enviar comprovante pelo WhatsApp">Enviar WhatsApp</a>
+  </div>
+
+  <button id="closeCart">Fechar Carrinho</button>
 </aside>
 
 <script>
   const pixKey = 'israeldasilvasantos355@gmail.com';
 
-  const cartBtn = document.getElementById('cart-btn');
+  const openCartBtn = document.getElementById('openCartBtn');
   const cart = document.getElementById('cart');
-  const cartItemsEl = document.getElementById('cart-items');
-  const cartTotalEl = document.getElementById('cart-total');
-  const pixSection = document.getElementById('pix-section');
-  const pixQR = document.getElementById('pix-qr');
-  const pixKeyEl = document.getElementById('pix-key');
-  const whatsappLink = document.getElementById('whatsapp-link');
-  const closeCartBtn = document.getElementById('close-cart');
+  const cartItemsEl = document.getElementById('cartItems');
+  const cartTotalEl = document.getElementById('cartTotal');
+  const pixPayment = document.getElementById('pixPayment');
+  const pixQR = document.getElementById('pixQR');
+  const pixKeyEl = document.getElementById('pixKey');
+  const whatsappLink = document.getElementById('whatsappLink');
+  const closeCartBtn = document.getElementById('closeCart');
+  const pedidoResumoEl = document.getElementById('pedidoResumo');
 
+  // Armazena os itens com quantidade e detalhes
   let cartItems = [];
 
-  cartBtn.addEventListener('click', () => {
+  openCartBtn.addEventListener('click', () => {
     cart.classList.add('open');
-    updateCartUI();
+    updateCart();
   });
-
   closeCartBtn.addEventListener('click', () => {
     cart.classList.remove('open');
   });
 
+  pixKeyEl.textContent = pixKey;
   pixKeyEl.addEventListener('click', () => {
     navigator.clipboard.writeText(pixKey).then(() => {
       alert('Chave Pix copiada!');
     });
   });
   pixKeyEl.addEventListener('keydown', e => {
-    if(e.key === 'Enter' || e.key === ' ') {
+    if (e.key === 'Enter' || e.key === ' ') {
       e.preventDefault();
       navigator.clipboard.writeText(pixKey).then(() => {
         alert('Chave Pix copiada!');
@@ -414,36 +60,95 @@
   });
 
   function addToCart(name, price, details) {
-    if(cartItems.some(item => item.name === name)) {
-      alert('Produto já está no carrinho.');
-      return;
+    // Se já tiver, só aumenta a quantidade
+    const existing = cartItems.find(item => item.name === name);
+    if (existing) {
+      existing.quantity++;
+    } else {
+      cartItems.push({name, price, details, quantity: 1});
     }
-    cartItems.push({name, price, details});
     alert(`${name} adicionado ao carrinho!`);
-    cartBtn.click();
-    updateCartUI();
+    openCartBtn.click();
+    updateCart();
   }
 
   function removeFromCart(name) {
     cartItems = cartItems.filter(item => item.name !== name);
-    updateCartUI();
+    updateCart();
   }
 
-  function updateCartUI() {
+  function changeQuantity(name, quantity) {
+    if (quantity < 1) return;
+    const item = cartItems.find(i => i.name === name);
+    if (item) {
+      item.quantity = quantity;
+      updateCart();
+    }
+  }
+
+  function updateCart() {
     cartItemsEl.innerHTML = '';
-    if(cartItems.length === 0) {
+    if(cartItems.length === 0){
       cartItemsEl.innerHTML = '<li>Seu carrinho está vazio.</li>';
-      cartTotalEl.textContent = '0.00';
-      pixSection.style.display = 'none';
+      pixPayment.style.display = 'none';
+      cartTotalEl.textContent = '0,00';
+      pedidoResumoEl.textContent = 'Resumo do pedido aparecerá aqui...';
+      whatsappLink.href = '#';
       return;
     }
 
     let total = 0;
     cartItems.forEach(item => {
-      total += item.price;
+      const subTotal = item.price * item.quantity;
+      total += subTotal;
+
       const li = document.createElement('li');
       li.innerHTML = `
-        <span><strong>${item.name}</strong> - R$ ${item.price.toFixed(2)}</span>
+        <span><strong>${item.name}</strong> - R$ ${item.price.toFixed(2)} x 
+        <input type="number" min="1" value="${item.quantity}" style="width:45px; margin-left:5px; border-radius:4px; border:none; text-align:center;" aria-label="Quantidade de ${item.name}" />
+        = R$ ${subTotal.toFixed(2)}</span>
         <button class="remove" aria-label="Remover ${item.name} do carrinho">X</button>
       `;
-      li.querySelector('button').addEventListener('click
+
+      const inputQty = li.querySelector('input[type=number]');
+      inputQty.addEventListener('change', e => {
+        const val = parseInt(e.target.value);
+        if (isNaN(val) || val < 1) {
+          e.target.value = item.quantity;
+          return;
+        }
+        changeQuantity(item.name, val);
+      });
+
+      li.querySelector('button').addEventListener('click', () => {
+        removeFromCart(item.name);
+      });
+
+      cartItemsEl.appendChild(li);
+    });
+
+    cartTotalEl.textContent = total.toFixed(2);
+
+    // Mostrar Pix e gerar QRCode
+    pixPayment.style.display = 'block';
+
+    // Gerar pedido texto formatado para enviar
+    let pedidoTexto = '🛒 *Resumo do Pedido* 🛒\n\n';
+    cartItems.forEach(item => {
+      pedidoTexto += `- ${item.name} (x${item.quantity}): R$ ${(item.price * item.quantity).toFixed(2)}\n`;
+    });
+    pedidoTexto += `\n*Total:* R$ ${total.toFixed(2)}\n\n`;
+    pedidoTexto += `*Chave Pix:* ${pixKey}\n\nPor favor, envie o comprovante para que possamos liberar seu pedido.`;
+
+    pedidoResumoEl.textContent = pedidoTexto;
+
+    // QR Code Pix automático (usando API pública gratuita para gerar QR)
+    const encodedPix = encodeURIComponent(`00020126580014br.gov.bcb.pix0136${pixKey}0208Compra Israel Store520400005303986540${(total*100).toFixed(0).padStart(10,'0')}5802BR5925Israel Store Loja6009Porto Alegre61080540900062070503***6304`);
+    // Mas isso é só um exemplo, o ideal é gerar QR correto via API Pix real. Aqui só para demo:
+    pixQR.src = `https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=${encodedPix}`;
+
+    // Link WhatsApp com pedido já formatado
+    const whatsappNumber = '5551997097814'; // Seu número com código do país e DDD
+    whatsappLink.href = `https://wa.me/${whatsappNumber}?text=${encodeURIComponent(pedidoTexto)}`;
+  }
+</script>
